@@ -58,6 +58,7 @@ Bug fixes
  * Very long words in page listings are now broken where necessary (Kevin Howbrook)
  * Language chosen in user preferences no longer persists on subsequent requests (Bojan Mihelac)
  * Prevent new block IDs from being assigned on repeated calls to ``StreamBlock.get_prep_value`` (Colin Klein)
+ * Prevent broken images in notification emails when static files are hosted on a remote domain (Eduard Luca)
 
 
 Upgrade considerations
